@@ -177,3 +177,10 @@ zkTimeout=10000
 #Disk check interval in milli seconds, interval to check the ledger dirs usage.
 #Default is 10000
 #diskCheckInterval=10000
+
+# Interval at which the auditor will do a check of all ledgers in the cluster.
+# By default this runs once a week. The interval is set in seconds.
+# To disable the periodic check completely, set this to 0.
+# Note that periodic checking will put extra load on the cluster, so it should
+# not be run more frequently than once a day.
+#auditorPeriodicCheckInterval=604800
